--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         </activity>
         <activity android:name=".screens.ThreeLabActivity"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".screens.FourthLabActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
