--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
 
         <activity android:name="laboratorywork.screens.DogsActivity"
             android:screenOrientation="portrait"/>
+
+        <activity android:name="laboratorywork.screens.ImageViewerActivity"
+            android:screenOrientation="portrait"/>
+
+
     </application>
 
 </manifest>
