--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-*.iml
-.gradle
-.gradlew
-.gradlew.bat
 /local.properties
-/.idea
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.idea
+.gradle
