--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name="laboratorywork.LaboratoryWorkApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="laboratorywork.screens.MainActivity">
+        <activity android:name="laboratorywork.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +19,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="laboratorywork.screens.DogsActivity"
+        <activity android:name="laboratorywork.dogList.DogsActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name="laboratorywork.screens.ImageViewerActivity"
+        <activity android:name="laboratorywork.preview.ImageViewerActivity"
             android:screenOrientation="portrait"/>
 
 
